# torchgeo-bench

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  DOCS.md  LICENSE  LICENSE-THIRDPARTY  METHODOLOGY.md  Makefile  README.md  environment.yml  pyproject.toml  run_timm_sweep.py  torchgeo_bench.py  torchgeo_bench_download.py
.github/: MAINTAINERS.md  copilot-instructions.md
.github/PULL_REQUEST_TEMPLATE/: add_model.md
.github/workflows/: ci.yaml  docs.yaml  release.yml
conf/: config.yaml
conf/model/: convnext_base.yaml  convnext_large.yaml  convnext_large_dinov3.yaml  convnext_small.yaml  convnext_tiny.yaml  densenet121.yaml  densenet161.yaml  efficientnet_b0.yaml  efficientnet_b1.yaml  efficientnet_b2.yaml  efficientnet_b3.yaml  efficientnetv2_l.yaml  efficientnetv2_s.yaml  mobilenetv3_large_100.yaml  mobilenetv3_small_100.yaml  regnetx_002.yaml  regnetx_008.yaml  regnety_002.yaml  regnety_008.yaml  resnet101.yaml  resnet18.yaml  resnet34.yaml  resnet50.yaml  vgg16.yaml  vgg19.yaml
conf/model/timm/: convnext_base.yaml  convnext_large.yaml  convnext_large_dinov3.yaml  convnext_small.yaml  convnext_tiny.yaml  convnextv2_base.yaml  convnextv2_tiny.yaml  densenet121.yaml  densenet161.yaml  densenet169.yaml  densenet201.yaml  efficientnet_b0.yaml  efficientnet_b1.yaml  efficientnet_b2.yaml  efficientnet_b4.yaml  efficientnetv2_m.yaml  maxvit_tiny_tf_224.yaml  mobilenetv3_large_100.yaml  mobilenetv3_small_100.yaml  regnetx_002.yaml  regnetx_008.yaml  regnety_002.yaml  regnety_008.yaml  resnet101.yaml  resnet152.yaml  resnet18.yaml  resnet34.yaml  resnet50.yaml  vgg16.yaml  vgg19.yaml  wide_resnet50_2.yaml
conf/model/torchgeo/: dofa_base.yaml  dofa_large.yaml  earthloc_s2_resnet50.yaml  resnet152_s2rgb_satlas_mi.yaml  resnet152_s2rgb_satlas_si.yaml  resnet18_s2rgb_moco.yaml  resnet18_s2rgb_seco.yaml  resnet50_fmow_gassl.yaml  resnet50_s2rgb_moco.yaml  resnet50_s2rgb_satlas_mi.yaml  resnet50_s2rgb_satlas_si.yaml  resnet50_s2rgb_seco.yaml  scalemae_large_fmow.yaml  swinv2b_naip_satlas_mi.yaml  swinv2b_naip_satlas_si.yaml  (+4 more)
docs/: Makefile  conf.py  index.rst  interesting-findings.md  make.bat  requirements.txt  segmentation_layers.md
docs/_static/: custom.css  results-explorer.html
docs/api/: cli.rst  datasets.rst  eval.rst  index.rst  intrinsic_dim.rst  models.rst  utils.rst
docs/perf_report/: cleanlab_audit_geobench.md
docs/plans/: torchid-intrinsic-dim.md
docs/user/: changelog.rst  configuration.rst  contribute_dataset.rst  contribute_model.rst  contributing.rst  datasets.rst  eval_own_model.rst  glossary.rst  index.rst  installation.rst  methodology.rst  models.rst  quickstart.rst  results-explorer.rst  results-format.rst  segmentation-layers.md  troubleshooting.rst
experiments/: _runner.py  run_c_sweep_experiment.py  run_cls_token_experiment.py  run_effect_of_lbfgs_vs_adam.py  run_main_experiments.py  run_resize_and_normalization_experiment.py  sample_size_analysis.py  sample_size_violin.py  strip_model_rows.py
experiments/scripts/: analyze_compute_cost.py  analyze_geobench_classes.py  cleanlab_extract_probs.py  cleanlab_per_class_multilabel.py  cleanlab_per_class_singlelabel.py  eurosat_family_dedup.py  regen_results_explorer.py  repack_geobench_v1.py  run_cleanlab_audit.py  tune_dataloader.py  viz_results.py
experiments/slurm/: calibration_rerun_fixes.sbatch  missing_sweeps.manifest  missing_sweeps.sbatch
notebooks/: cls_token_analysis.ipynb
results/: all_results.csv  c_sweep_experiment.csv  cls_token_diff_knn5.csv  cls_token_diff_linear.csv  cls_token_experiment.csv  effect_of_lbfgs_vs_adam.csv
scripts/: analyze_compute_cost.py  analyze_geobench_classes.py  benchmark_utils.py  build_uq_reliability_cache.py  check_geobench_datasets.py  generate_knn_benchmark_data.py  generate_lr_benchmark_data.py  plot_c_sweep_gaps.py  plot_fast_probing_results.py  plot_uq_error_curves.py  plot_uq_results.py  regen_results_explorer.py  render_flagged_gallery.py  repack_geobench_v1.py  run_cka.sh  run_eurosat_optim_sweep.py  run_eurosat_sweep.sh  test_knn_gpu_smoke.py  tune_dataloader.py  update_baselines.py  viz_results.py
scripts/slurm/: build_probe_jobs.py  cleanlab_audit.sh  eurosat_spatial_geofm.sh  eurosat_spatial_pool_ablation.sh  knn_gpu_smoke.sh  olmoearth_sweep.jobs  olmoearth_sweep.py  olmoearth_sweep.sh  probe_sweep.sh  slow_tests.sh  smoke_imports.sh
slides/: .gitignore  package.json  slides.md  style.css
src/: cli.py  datasets.py  download.py  geobench_dataset.py  linear.py  reference_datasets.py  segmentation_probe.py  segmentation_task.py  utils.py
src/models/: __init__.py  timm.py  torchgeo_models.py
src/torchgeo_bench/: __init__.py  __main__.py  calibration.py  cli.py  dataset_info.py  datasets.py  download.py  geobench_dataset.py  hpo.py  intrinsic_dim.py  knn.py  linear.py  main.py  model_metadata.py  model_perf.py  model_profile.py  nf_pipeline.py  overfit_check.py  sample_size_pipeline.py  sanity_checks.py  seg_corruption_pipeline.py  seg_viz_pipeline.py  segmentation_probe.py  segmentation_task.py  segmentation_viz.py  utils.py
tests/: conftest.py  test_all_bands_smoke.py  test_append_rows_atomic.py  test_band_mapping.py  test_bench_model.py  test_calibration.py  test_cka_analysis.py  test_cka_hooks.py  test_cka_metrics.py  test_cka_pipeline.py  test_cka_viz_smoke.py  test_cli.py  test_compare_implementations.py  test_dataset_units.py  test_datasets.py  test_download.py  test_geobench_dataset.py  test_geobench_v2_datasets.py  test_image_stats.py  test_input_units.py  test_integration.py  test_intrinsic_dim.py  test_knn_gpu_parity.py  test_linear.py  test_logistic_regression_parity.py  test_main_fast.py  test_main_instantiate_bands.py  test_main_intrinsic_dim_fast.py  test_main_multilabel_fast.py  test_main_profile_fast.py  test_main_segmentation_fast.py  test_main_utils.py  test_model_baselines.py  test_model_profile.py  test_multilabel.py  test_nf_pipeline.py  test_normalization.py  test_olmoearth.py  test_plot_uq_error_curves_smoke.py  test_plot_uq_reliability_smoke.py  (+28 more)
tests/fixtures/: accuracy_baselines.csv
(+260 files in other folders)
