[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.11.6,<0.12" ]

[project]
name = "torchgeo-bench"
version = "0.3.0"
description = "Lightweight benchmarking framework for geospatial models"
readme = "README.md"
keywords = [
  "benchmark",
  "earth observation",
  "foundation models",
  "geospatial",
  "machine learning",
  "remote sensing",
]
license = { text = "MIT" }
authors = [
  { name = "Caleb Robinson", email = "calebrob6@gmail.com" },
  { name = "Isaac Corley", email = "isaac.a.corley@gmail.com" },
  { name = "Nils Lehmann", email = "nils.lehmann24@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "faiss-cpu>=1.7",
  "geobenchv2>=0.9",
  "h5py>=3.8",
  "huggingface-hub>=0.20",
  "hydra-core>=1.3",
  "numpy>=1.24",
  "omegaconf>=2.3",
  "pandas>=2",
  "rich>=13",
  "scikit-learn>=1.3",
  "timm>=0.9",
  "torch>=2",
  "torchgeo @ git+https://github.com/microsoft/torchgeo.git@e585e2c07f7a",
  "torchmetrics>=1.4",
  "torchvision>=0.15",
  "typer>=0.9",
]
optional-dependencies.all = [
  "torchgeo-bench[cleanlab]",
  "torchgeo-bench[cuda]",
  "torchgeo-bench[dev]",
  "torchgeo-bench[docs]",
  "torchgeo-bench[id]",
  "torchgeo-bench[profile]",
  "torchgeo-bench[sam3]",
  "torchgeo-bench[terratorch]",
  "torchgeo-bench[viz]",
]
optional-dependencies.cleanlab = [
  "cleanlab>=2.7",
  "imagehash>=4.3",
  "matplotlib>=3.5",
  "pillow>=9",
]
optional-dependencies.cuda = [
  # GPU-accelerated KNN via faissknn (CUDA 12.x). faiss-cuda-cu128
  # wheels are manylinux_2_28 (glibc >= 2.28 / RHEL8+). Both packages
  # share the `faiss/` namespace; installing this extra into a venv
  # that already has faiss-cpu will result in faiss-cpu's loader
  # winning. Either start from a fresh venv or `pip uninstall
  # faiss-cpu` first.
  "faiss-cuda-cu128>=1.14.1.post3",
  "faissknn>=0.0.3",
]
optional-dependencies.dev = [
  "mdformat>=0.7.22",
  "pre-commit>=4.3",
  "pyproject-fmt>=2.21",
  "pytest>=7.3",
  "pytest-cov>=4.1",
  "pytest-xdist>=3.6",
  "ruff>=0.0.270",
]
optional-dependencies.docs = [
  "linkify-it-py>=2",
  "myst-parser>=2",
  "pydata-sphinx-theme>=0.15",
  "sphinx>=7",
  "sphinx-copybutton>=0.5",
]
optional-dependencies.id = [
  "torchid>=0.3; python_version>='3.13'",
]
optional-dependencies.olmoearth = [
  "olmoearth-pretrain-minimal>=0.0.5",
]
optional-dependencies.profile = [
  "pynvml>=11.5",
]
optional-dependencies.sam3 = [
  "transformers>=4.50",
]
optional-dependencies.terratorch = [
  "terratorch>=1",
]
optional-dependencies.viz = [
  "matplotlib>=3.5",
  "pillow>=9",
]
urls.Documentation = "https://torchgeo.org/torchgeo-bench/"
urls.Homepage = "https://github.com/torchgeo/torchgeo-bench"
urls.Issues = "https://github.com/torchgeo/torchgeo-bench/issues"
urls.Repository = "https://github.com/torchgeo/torchgeo-bench"
scripts.torchgeo-bench = "torchgeo_bench.cli:main"

[tool.hatch]
build.targets.wheel.packages = [ "src/torchgeo_bench" ]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "outputs",
]
lint.select = [
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
lint.ignore = [
  "B008", # do not perform function calls in argument defaults
  "B905", # zip() without an explicit strict= parameter
  "D104", # missing docstring in public package
  "D105", # missing docstring in magic method
  "D107", # missing docstring in __init__ (documented in class docstring)
  "E501", # line too long (handled by ruff format)
]
lint.per-file-ignores."experiments/scripts/**/*.py" = [ "D" ]
lint.per-file-ignores."tests/**/*.py" = [ "ARG", "D" ]
lint.pydocstyle.convention = "google"

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.python_files = [ "test_*.py" ]
ini_options.python_classes = [ "Test*" ]
ini_options.python_functions = [ "test_*" ]
ini_options.addopts = [
  "--verbose",
  "-m not slow",
]
ini_options.markers = [
  "slow: integration tests that load real data and run models (use -m slow to include)",
]

[tool.coverage]
run.omit = [
  "*/test_*.py",
  "*/tests/*",
  "*/torchgeo_bench/datasets/_v1_webdataset.py",
  "*/torchgeo_bench/datasets/geobench_v1.py",
  "*/torchgeo_bench/segmentation_viz.py",
]
run.source = [ "torchgeo_bench" ]
report.exclude_lines = [
  "@abstractmethod",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
]
